[package]
name = "urbit-http-api"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-threaded    = {version = "0.1.0", git="https://github.com/robkorn/eventsource-threaded", branch= "main"}
thiserror               = "1.0.22"
json                    = "0.12.4"
rand                    = "0.7.3"
reqwest                 = {version = "0.10.9", features= ["blocking", "json"]}