[package]
name = "urbit-http-api"
version = "0.3.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"
description = "Wraps the Urbit ship http api exposing it as an easy-to-use Rust crate."
repository = "https://github.com/robkorn/rust-urbit-http-api"
license = "MIT"
keywords = ["urbit", "http", "ship", "airlock", "library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eventsource-threaded    = "0.1.0"
thiserror               = "1.0.23"
json                    = "0.12.4"
rand                    = "0.8.3"
reqwest                 = {version = "0.11.0", features= ["blocking", "json"]}
yaml-rust               = "0.4.5"
regex                   = "1.4.3"
chrono                  = "0.4.19"
crossbeam               = "0.8.0"